--- a/ResumeBuilderBackend/package.json
+++ b/ResumeBuilderBackend/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^5.1.0",
     "nodemailer": "^6.9.1",
     "openai": "^3.2.1",
-    "puppeteer": "^19.7.3"
+    "puppeteer": "^19.7.3",
+    "typescript": "^5.6.2"
   }
 }
